Unito backend con frontend

--- a/Front-End/src/app/components/editor/editor.component.html
+++ b/Front-End/src/app/components/editor/editor.component.html
@@ -4,5 +4,6 @@
 
 </div>
 <div [hidden]="!selectedCell" class="editClass">
-    <class-menu></class-menu>
+    <class-menu [hidden]="mainEditorService.getActivityModeStatus()"></class-menu>
+    <activity-menu [hidden]="!mainEditorService.getActivityModeStatus()"></activity-menu>
 </div>
