sistemata aggiunta metodi e aggiunto ritorno al diagramma classi

--- a/Front-End/src/app/components/editor/components/activity-menu/activity-menu.component.html
+++ b/Front-End/src/app/components/editor/components/activity-menu/activity-menu.component.html
@@ -1,3 +1,3 @@
-<p>
-  activity-menu works!
-</p>
+<div>
+  <button class="btn btn-default" (click)="this.mainEditorService.enterClassMode()">Diagramma delle Classi</button>
+</div>
