--- a/Front-End/src/app/components/menu/components/file/file.component.html
+++ b/Front-End/src/app/components/menu/components/file/file.component.html
@@ -7,7 +7,7 @@
     <li><a href="#" >Salva</a></li>
     <li><a (click)="esporta()" href="#" >Esporta</a></li>
     <li>
-      <input id="upload" type="file" class="custom-file-input" (change)="fileChange($event)" placeholder="Upload file" accept=".pdf,.doc,.docx">
+      <input id="upload" type="file" class="custom-file-input" (change)="importa($event)" placeholder="Upload file" accept=".json">
       <a href="#" onclick="$('input[id=upload]').click();">Importa progetto </a>
     </li>
     <li><a href="#" >Genera codice</a></li>
