FIX CSS tabella parametri attuali
Ora il div che contiene la tabella è scrollable e non può estendersi oltre i 200px. (provare a inserire 3/4 attributi per capire meglio la spiegazione)

--- a/Front-End/src/app/components/editor/components/class-menu/class-menu.component.css
+++ b/Front-End/src/app/components/editor/components/class-menu/class-menu.component.css
@@ -67,7 +67,11 @@
     transition: height 0.1s;
 }
 
-
 .tipiMetodo {
   vertical-align: -webkit-baseline-middle;
+}
+
+#tabellaParametri {
+  max-height:200px;
+  overflow:auto;
 }
