--- a/Front-End/src/app/components/editor/components/class-menu/class-menu.component.html
+++ b/Front-End/src/app/components/editor/components/class-menu/class-menu.component.html
@@ -127,7 +127,7 @@
       </div>
       <div class="container-fluid">
         <div class="row clearfix">
-          <div class="col-md-12 column">
+          <div class="col-md-12 column" id="tabellaParametri">
             Parametri attuali
             <table class="table table-bordered table-hover" id="tab_logic">
               <thead>
