--- a/Front-End/src/app/components/editor/components/class-menu/class-menu.component.css
+++ b/Front-End/src/app/components/editor/components/class-menu/class-menu.component.css
@@ -1,6 +1,7 @@
 .menu {
   background-color: #EAEAF1;
   border-left: 1px solid black;
+  border-bottom: 1px solid black;
   font-weight: bold;
   font-size: 14px;
   text-align: center;
@@ -19,10 +20,6 @@
 .campiAttributo {
   padding-bottom: 3%;
 }
-
-/*.changeNome {
-  padding-top: 4%;
-}*/
 
 .iconaMirrow {
   -moz-transform: scale(-1, 1);
