--- a/Front-End/src/app/components/editor/components/toolbar/toolbar.component.html
+++ b/Front-End/src/app/components/editor/components/toolbar/toolbar.component.html
@@ -20,4 +20,5 @@
     <div class="icona"><button (click)="addActivityForShape()" class="add addAttivitaFor" title="Aggiungi l'attività "></button></div>
     <div class="icona"><button (click)="addConnector()" class="add addConnettore" title="Aggiungi connettore"></button></div>
     <div class="icona"><button (click)="addDecision()" class="add addDecision" title="Aggiungi decisione"></button></div>
+    <div class="icona"><button (click)="addEndDecision()" class="add addEndDecision" title="Aggiungi fine decisione"></button></div>
 </div>
