--- a/Front-End/src/app/components/editor/components/class-menu/class-menu.component.html
+++ b/Front-End/src/app/components/editor/components/class-menu/class-menu.component.html
@@ -65,7 +65,7 @@
             </button>
           </span>
           <!-- menù a comparsa (collapse) per modificare un attributo-->
-          <div class="campiAttributo collapse" attr.id="{{attr.name}}">
+          <div class="campiAttributo collapse listaModAttr" attr.id="{{attr.name}}">
             <div class="modificaAttributo accessoAttr">
               <div class="aggiungiAttributo staticAttr">
                 <label>Static <input #checkStaticAtt type="checkbox" name="static" class=".checkbox-circle" value="Stiatic" /></label>
